# fastapi-compose-template

./: Dockerfile  README.md  compose.yml  pyproject.toml
app/: main.py
app/base/: views.py
