[tool.poetry]
name = "mem"
version = "0.1.0"
description = ""
authors = ["Damir Abdullin <me@damirazo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
